# KryneEngineExternal

./: .gitattributes  CMakeLists.txt
DirectX-Headers/: CMakeLists.txt
DirectX12MemoryAllocator/: CMakeLists.txt
DirectX12MemoryAllocator/include/: D3D12MemAlloc.h
DirectX12MemoryAllocator/src/: D3D12MemAlloc.cpp
DirectXCompiler/win32/lib/arm64/: dxcompiler.lib
DirectXCompiler/win32/lib/x86/: dxcompiler.lib
EASTL/: CMakeLists.txt
EASTL/eaassert-e5e1812/: CMakeLists.txt
EASTL/eastdc-fbcc34e/: CMakeLists.txt
EASTL/eastl-3.27.01/: CMakeLists.txt
EASTL/eastl-3.27.01/include/EASTL/: string_view.h
EASTL/eathread-a77e227/: CMakeLists.txt
EASTL/eathread-a77e227/source/unix/: eathread_unix.cpp
MetalCpp/: CMakeLists.txt
MetalCpp/include/Metal/: Metal.hpp
RenderPipelineShaders/: CMakeLists.txt
RenderPipelineShaders/examples/: hello_triangle.cpp
RenderPipelineShaders/src/runtime/common/: rps_render_graph.hpp
RenderPipelineShaders/src/runtime/common/phases/: rps_memory_schedule.hpp
WinPixEventRuntime/: CMakeLists.txt
boost/: CMakeLists.txt
boost/core-boost-1.86.0/: CMakeLists.txt
boost/pool-boost-1.86.0/: CMakeLists.txt
boost/smart_ptr-boost-1.86.0/: CMakeLists.txt
ck/: CMakeLists.txt
eastl/: CMakeLists.txt  EASTL_lldb.py
eastl-3.27.01/: EASTL_lldb.py
eastl-3.27.01/ext/: vnsprintf.cpp
glfw/include/GLFW/: glfw3native.h
glm/: CMakeLists.txt
imgui/: CMakeLists.txt  imgui_widgets.cpp
metal-cpp/: CMakeLists.txt
metal-cpp-extensions/: CMakeLists.txt
moodycamel/: CMakeLists.txt
zstd-1.5.7/: CMakeLists.txt  README.md
